made 3rd section and started table

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alabuga Digital</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
     <section class="connect">
         <div class="container">
@@ -54,8 +55,138 @@
         </div>
     </section>
 
-    <section class="section-1">
+    <section class="first-section">
+        <div class="container">
+            <div class="first-section__wrap">
+                <div class="first-section__qr">
+                    <img src="./assets/img/КонференцЗал1.png" alt="Pic" class="first-section-pic">
+                    <h3 class="first-section__qr-title">Вход для участников по QR-коду или по ссылке</h3>
+                    <div class="first-section__qr-sub-title">Простое подключение с любых устройств</div>
+                </div>
 
+                <div class="first-section__text-block">
+                    <div class="first-section__mp">
+                        <img src="./assets/img/qr-icon-1.svg" alt="icon1">    
+                        <div class="first-section__mp-title">Делает мероприятия интереснее</div>
+                        <div class="first-section__mp-sub-title">Вовлечение аудитории и управление вниманием за счёт интерактива. Чат для вопросов, опросы, викторины и много другое для событий, которые запомнятся</div>
+                    </div>
+                    <div class="first-section__rus-int">
+                        <div class="first-section__int">
+                            <img src="./assets/img/qr-icon-2.svg" alt="icon2">
+                            <div class="first-section__int-title">Нужен только интернет</div>
+                            <div class="first-section__int-sub-title">Можно использовать как в онлайн, так и в офлайн мероприятиях</div>
+                        </div>
+                        <div class="first-section__rus">
+                            <img src="./assets/img/qr-icon-3.svg" alt="icon3">
+                            <div class="first-section__rus-title">Россий­ская разра­ботка</div>
+                            <div class="first-section__rus-sub-title">Работает, независимо от санкций</div>
+                        </div>
+
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="second-section">
+        <div class="container">
+            <h2 class="second-section__title">Гибкая настройка под мероприятие</h2>
+            <div class="second-section__wrap">
+                <img src="./assets/img/конференцЗал2.png" alt="Pic" class="second-section__pic">
+                <div class="second-section__text-block">
+                    <div class="second-section__item">
+                        <img src="./assets/img/second-section-icon1.svg" alt="Icon1" class="second-section__icon">
+                        <p class="second-section__item-text">Прямая трансляция на мобильные устройства</p>
+                    </div>
+                    <div class="second-section__item">
+                        <img src="./assets/img/second-section-icon2.png" alt="Icon2" class="second-section__icon">
+                        <p class="second-section__item-text">Чат для вопросов</p>
+                    </div>
+                    <div class="second-section__item">
+                        <img src="./assets/img/second-section-icon3.png" alt="Icon3" class="second-section__icon">
+                        <p class="second-section__item-text">Квизы и викторины </p>
+                    </div>
+                    <div class="second-section__item">
+                        <img src="./assets/img/second-section-icon4.png" alt="Icon1" class="second-section__icon" style="margin-right: 30px;">
+                        <p class="second-section__item-text">Мобильный пульт</p>
+                    </div>
+                    <div class="second-section__item">
+                        <img src="./assets/img/second-section-icon5.png" alt="Icon1" class="second-section__icon">
+                        <p class="second-section__item-text">Облачное хранилище</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="table">
+        <div class="container">
+            <div class="table__title-block">
+                <h3 class="table__default">Обычные презентации</h3>
+                <h3 class="table__digital">Презентации с Alabuga Digital</h3>
+            </div>
+            <div class="table__wrap">
+                <div class="table__default-block">
+                    <div class="table__default-box">
+                        <p class="table__default-box-title">Зрители не вовлечены в мероприятие</p>
+                        <p class="table__default-box-text">Участники просто слушают выступление и изучают материалы.</p>
+                    </div>
+                    <div class="table__default-box">
+                        <p class="table__default-box-title">Для каждой задачи отдельный инструмент</p>
+                        <p class="table__default-box-text">Презентации запускаются из письма-приглашения, сбор обратной связи и опросы проводятся на разных сайтах.</p>
+                    </div>
+                    <div class="table__default-box">
+                        <p class="table__default-box-title">Статистика в разных форматах и в разных местах</p>
+                        <p class="table__default-box-text">Чтобы провести качественный анализ мероприятия, нужно собрать и проанализировать данные из разных источников.</p>
+                    </div>
+                    <div class="table__default-box">
+                        <p class="table__default-box-title">Сбор вопросов голосом</p>
+                        <p class="table__default-box-text">Чтобы провести качественный анализ мероприятия, нужно собрать и проанализировать данные из разных источников.</p>
+                    </div>
+                    <div class="table__default-box">
+                        <p class="table__default-box-title">Обратная связь после мероприятия</p>
+                        <p class="table__default-box-text">Организаторы вовремя не узнают о проблемах и не смогут их исправить.</p>
+                    </div>
+                </div>
+                <div class="table__digital-block">
+                    <div class="table__digital-box">
+                        <p class="table__digital-box-title">Зрители активно участвуют</p>
+                        <p class="table__digital-box-text">Захватите внимание участников. Интерактивное взаимодействие с аудиторией помогает лучше запомнить материал и делает событие интереснее.</p>
+                    </div>
+                    <div class="table__digital-box">
+                        <p class="table__digital-box-title">Один инструмент для всего</p>
+                        <p class="table__digital-box-text">Узнайте, что зрители думают о мероприятии и как
+                            оценивают каждую тему и спикера, задайте вопросы
+                            или проведите опрос, чтобы проверить гипотезу.</p>
+                        <p class="table__digital-box-text">И всё это в одном месте и с демонстрацией
+                            презентации в самом решении!</p>
+                    </div>
+                    <div class="table__digital-box">
+                        <p class="table__digital-box-title">Единый отчёт по всему интерактивному
+                            взаимодействию с аудиторией</p>
+                        <p class="table__digital-box-text">Подводите итоги мероприятия легко.
+                            Вся обратная связь выгружается в Excel.</p>
+                    </div>
+                    <div class="table__digital-box">
+                        <p class="table__digital-box-title">Сбор вопросов онлайн</p>
+                        <p class="table__digital-box-text">Доверьте сбор вопросов Polly, чтобы спикер
+                            и зрители не отвлекались от выступления. Получайте
+                            корректные вопросы и ответы по теме за счёт
+                            встроенной модерации.</p
+                    </div>
+                    <div class="table__digital-box">
+                        <p class="table__digital-box-title">Обратная связь во время мероприятия</p>
+                        <p class="table__digital-box-text">Узнавайте о пожеланиях и проблемах сразу.
+                            Например, настройте звук или скорректируйте
+                            температуру в аудитории, чтобы зрителям было
+                            комфортно.</p>
+                            <div class="btn">Отправить заявку</div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
     </section>
 </body>
 </html>
