--- a/index.html
+++ b/index.html
@@ -130,62 +130,108 @@
                 <div class="table__default-block">
                     <div class="table__default-box">
                         <p class="table__default-box-title">Зрители не вовлечены в мероприятие</p>
-                        <p class="table__default-box-text">Участники просто слушают выступление и изучают материалы.</p>
+                        <p class="table__default-box-text" style="margin-bottom: 35px;">Участники просто слушают выступление и изучают материалы.</p>
                     </div>
                     <div class="table__default-box">
                         <p class="table__default-box-title">Для каждой задачи отдельный инструмент</p>
-                        <p class="table__default-box-text">Презентации запускаются из письма-приглашения, сбор обратной связи и опросы проводятся на разных сайтах.</p>
+                        <p class="table__default-box-text" style="margin-bottom: 95px;">Презентации запускаются из письма-приглашения, сбор обратной связи и опросы проводятся на разных сайтах.</p>
                     </div>
                     <div class="table__default-box">
                         <p class="table__default-box-title">Статистика в разных форматах и в разных местах</p>
-                        <p class="table__default-box-text">Чтобы провести качественный анализ мероприятия, нужно собрать и проанализировать данные из разных источников.</p>
+                        <p class="table__default-box-text" style="margin-bottom: 65px;">Чтобы провести качественный анализ мероприятия, нужно собрать и проанализировать данные из разных источников.</p>
                     </div>
                     <div class="table__default-box">
                         <p class="table__default-box-title">Сбор вопросов голосом</p>
-                        <p class="table__default-box-text">Чтобы провести качественный анализ мероприятия, нужно собрать и проанализировать данные из разных источников.</p>
+                        <p class="table__default-box-text" style="margin-bottom: 100px;">Чтобы провести качественный анализ мероприятия, нужно собрать и проанализировать данные из разных источников.</p>
                     </div>
                     <div class="table__default-box">
                         <p class="table__default-box-title">Обратная связь после мероприятия</p>
-                        <p class="table__default-box-text">Организаторы вовремя не узнают о проблемах и не смогут их исправить.</p>
+                        <p class="table__default-box-text" style="margin-bottom: 95px;">Организаторы вовремя не узнают о проблемах и не смогут их исправить.</p>
                     </div>
                 </div>
                 <div class="table__digital-block">
                     <div class="table__digital-box">
                         <p class="table__digital-box-title">Зрители активно участвуют</p>
-                        <p class="table__digital-box-text">Захватите внимание участников. Интерактивное взаимодействие с аудиторией помогает лучше запомнить материал и делает событие интереснее.</p>
+                        <p class="table__digital-box-text" style="margin-bottom: 30px;">Захватите внимание участников. Интерактивное взаимодействие с аудиторией помогает лучше запомнить материал и делает событие интереснее.</p>
                     </div>
                     <div class="table__digital-box">
                         <p class="table__digital-box-title">Один инструмент для всего</p>
                         <p class="table__digital-box-text">Узнайте, что зрители думают о мероприятии и как
                             оценивают каждую тему и спикера, задайте вопросы
                             или проведите опрос, чтобы проверить гипотезу.</p>
-                        <p class="table__digital-box-text">И всё это в одном месте и с демонстрацией
+                        <p class="table__digital-box-text" style="margin-bottom: 75px;">И всё это в одном месте и с демонстрацией
                             презентации в самом решении!</p>
                     </div>
                     <div class="table__digital-box">
                         <p class="table__digital-box-title">Единый отчёт по всему интерактивному
                             взаимодействию с аудиторией</p>
-                        <p class="table__digital-box-text">Подводите итоги мероприятия легко.
+                        <p class="table__digital-box-text" style="margin-bottom: 170px;">Подводите итоги мероприятия легко.
                             Вся обратная связь выгружается в Excel.</p>
                     </div>
                     <div class="table__digital-box">
                         <p class="table__digital-box-title">Сбор вопросов онлайн</p>
-                        <p class="table__digital-box-text">Доверьте сбор вопросов Polly, чтобы спикер
+                        <p class="table__digital-box-text" style="margin-bottom: 100px;">Доверьте сбор вопросов Polly, чтобы спикер
                             и зрители не отвлекались от выступления. Получайте
                             корректные вопросы и ответы по теме за счёт
-                            встроенной модерации.</p
+                            встроенной модерации.</p>
                     </div>
                     <div class="table__digital-box">
                         <p class="table__digital-box-title">Обратная связь во время мероприятия</p>
-                        <p class="table__digital-box-text">Узнавайте о пожеланиях и проблемах сразу.
+                        <p class="table__digital-box-text" style="margin-bottom: 45px;">Узнавайте о пожеланиях и проблемах сразу.
                             Например, настройте звук или скорректируйте
                             температуру в аудитории, чтобы зрителям было
                             комфортно.</p>
-                            <div class="btn">Отправить заявку</div>
+                            <a class="btn" style="max-width: 200px;">Отправить заявку</a>
                     </div>
                 </div>
                 
             </div>
+        </div>
+    </section>
+
+    <section class="features">
+        <div class="container">
+            <div class="features__wrap">
+                <h3 class="features__title">Что внутри</h3>
+                <div class="features__card-block">
+                    <div class="features__first-row">
+                        <div class="features__public-card" style="width: 388px;">
+                            <img src="./assets/img/features-icon-1.svg" alt="icon1" class="features__icon">
+                            <p class="features__text" style="max-width: 300px;">Создание приватных
+                                и публичных мероприятий</p>
+                        </div>
+                        <div class="features__like-card" style="width: 443px;">
+                            <img src="./assets/img/features-icon-2.svg" alt="icon2" class="features__icon">
+                            <p class="features__text" style="max-width: 300px;">Онлайн-сбор вопросов от зрителей
+                                с модерацией ответов</p>
+                        </div>
+                        <div class="features__quiz-card" style="width: 265px;">
+                            <img src="./assets/img/features-icon-3.svg" alt="icon3" class="features__icon">
+                            <p class="features__text" style="max-width: 133px;">Создание
+                                опросов</p>
+                        </div>
+
+                    </div>
+                    <div class="features__second-row">
+                        <div class="features__excel-card-4" style="width: 422px;">
+                            <img src="./assets/img/features-icon-4.svg" alt="icon4" class="features__icon">
+                            <p class="features__text" style="max-width: 400px;">Выгрузка статистики по итогу
+                                проведённых мероприятий в Excel</p>
+                        </div>
+                        <div class="features__people-card-5" style="width: 360px;">
+                            <img src="./assets/img/features-icon-5.svg" alt="icon5" class="features__icon">
+                            <p class="features__text" style="max-width: 250px;">Мероприятия
+                                до <br>3 000 участников</p>
+                        </div>
+                        <div class="features__record-card-6" style="width: 312px;">
+                            <img src="./assets/img/features-icon-6.svg" alt="icon6" class="features__icon">
+                            <p class="features__text" style="max-width: 280px;">Запись после мероприятия, в удобных форматах</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </section>
 </body>
