Did footer, fixed isues. Login page left

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             Например, настройте звук или скорректируйте
                             температуру в аудитории, чтобы зрителям было
                             комфортно.</p>
-                            <a class="btn" style="max-width: 200px;">Отправить заявку</a>
+                            <a class="btn" style="max-width: 200px; margin-bottom: 30px;">Отправить заявку</a>
                     </div>
                 </div>
                 
@@ -234,5 +234,91 @@
 
         </div>
     </section>
+
+    <section class="form">
+        <div class="container">
+            <form class="form__box">
+                <h3 class="form__title">
+                    Отправить заявку на демо
+                </h3>
+                <div class="form__sub-title">
+                    Оставьте контактные данные и наши менеджеры с вами свяжутся
+                </div>
+                <div class="form__input">
+                    <p class="form__input-text">Имя</p>
+                    <input type="email" class="form__input-block" placeholder="Павел">
+                    <p class="form__input-text">Почта</p>
+                    <input type="email" class="form__input-block" placeholder="customer@mail.ru">
+                    <p class="form__input-text">Телефон</p>
+                    <input type="tel" class="form__input-block" placeholder="+7 (999) 999-99-99" style="margin-bottom: 52px;">
+                    <div class="form__label">
+                        <input type="checkbox" name="recall" value="yes" class="form__checkbox">
+                        <p class="form__checkbox-text">Даю согласие на получение обратной связи по заявке</p>
+                    </div>
+                    <div class="form__label">
+                        <input type="checkbox" name="subcribe" value="yes" class="form__checkbox">
+                        <p class="form__checkbox-text">Даю согласие на получение обратной связи по заявке</p>
+                    </div>
+                    <div class="form__btn-box">
+
+                        <a href="#" class="btn">Отправить</a>
+                    </div>
+                </div>
+            </form>
+
+
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <img src="./assets/img/logo-footer.svg" alt="Logo" class="footer__logo">
+            <div class="footer__wrap">
+                <div class="footer__products">
+                    <h4 class="footer__title">Наши продукты</h4>
+                    <div class="footer__link-block">
+                        <a href="#" class="footer__link">Алабуга Политех</a>
+                        <a href="#" class="footer__link">Алабуга HR platform</a>
+                        <a href="#" class="footer__link">Moodle Alabuga</a>
+                    </div>
+                </div>
+                <div class="footer__about">
+                    <h4 class="footer__title">Об Alabuga Digital</h4>
+                    <div class="footer__link-block">
+                        <a href="#" class="footer__link">Гибкая настройка под мероприятие</a>
+                        <a href="#" class="footer__link">Преимущества</a>
+                        <a href="#" class="footer__link">Подписка на рассылку</a>
+                    </div>
+                </div>
+                <div class="footer__contacts">
+                    <h4 class="footer__title">Контакты</h4>
+                    <div class="footer__link-block">
+                        <div class="footer__tg">
+                            <img src="./assets/img/tg-icon.png" alt="icon" class="footer__icon">
+                            <a href="#" class="footer__link">Новостной телеграм канал</a>
+                            
+                        </div>
+                        <div class="footer__tg">
+                            <img src="./assets/img/tg-icon.png" alt="icon" class="footer__icon">
+                            <a href="#" class="footer__link">Бот поддержки</a>
+
+                        </div>
+                        <div class="footer__tg">
+                            <img src="./assets/img/tg-icon.png" alt="icon" class="footer__icon">
+                            <a href="#" class="footer__link" style="width: 230px;">Сообщество разработчиков</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr class="footer__hr">
+            <div class="footer__info">
+                <p class="footer__link" style="max-width: 500px;">ООО “Alabuga DIgital” -  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque quis diam nisl. Sed blandit semper. </p>
+                <div class="footer__politic">
+                    <a class="footer__link">Политика конфиденциальности</a>
+                    <a class="footer__link">Политика обработки данных</a>
+                    <a class="footer__link">Лицензия</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
