For release version. Did login page and navigation btns

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
                                 <p class="header__text-title">Alabuga </p>
                                 <p class="header__text-sub-title">Digital</p>
                             </div>
-            
                         </div>
                         <div class="header__btns">
-                            <a href="#" class="header__btns-login">Вход</a>
-                            <a href="#" class="header__btns-sign-in btn">Регистрация</a>
+                            <a href="./login.html" class="header__btns-login">Вход</a>
+                            <a href="./login.html" class="header__btns-sign-in btn">Регистрация</a>
                         </div>
 
                     </div>
@@ -48,7 +47,7 @@
                 <div class="main__text-block">
                     <h3 class="main__text">Alabuga Digital</h3>
                     <h1 class="main__title">Интерактивное взаимодействие с аудиторией</h1>
-                    <a href="#" class="btn main__btn">Начать</a>
+                    <a href="./login.html" class="btn main__btn">Начать</a>
                 </div>
                 <img src="./assets/img/main-bg.png" alt="Pic">
             </div>
@@ -89,7 +88,7 @@
         </div>
     </section>
 
-    <section class="second-section">
+    <section class="second-section" id="flexible_setup">
         <div class="container">
             <h2 class="second-section__title">Гибкая настройка под мероприятие</h2>
             <div class="second-section__wrap">
@@ -120,7 +119,7 @@
         </div>
     </section>
 
-    <section class="table">
+    <section class="table" id="table">
         <div class="container">
             <div class="table__title-block">
                 <h3 class="table__default">Обычные презентации</h3>
@@ -235,7 +234,7 @@
         </div>
     </section>
 
-    <section class="form">
+    <section class="form" id="form">
         <div class="container">
             <form class="form__box">
                 <h3 class="form__title">
@@ -276,17 +275,17 @@
                 <div class="footer__products">
                     <h4 class="footer__title">Наши продукты</h4>
                     <div class="footer__link-block">
-                        <a href="#" class="footer__link">Алабуга Политех</a>
-                        <a href="#" class="footer__link">Алабуга HR platform</a>
-                        <a href="#" class="footer__link">Moodle Alabuga</a>
+                        <a href="https://polytech.alabuga.ru/" class="footer__link">Алабуга Политех</a>
+                        <a href="https://hr.alabuga.ru/my-competence" class="footer__link">Алабуга HR platform</a>
+                        <a href="https://moodle.alabuga.space/my/" class="footer__link">Moodle Alabuga</a>
                     </div>
                 </div>
                 <div class="footer__about">
                     <h4 class="footer__title">Об Alabuga Digital</h4>
                     <div class="footer__link-block">
-                        <a href="#" class="footer__link">Гибкая настройка под мероприятие</a>
-                        <a href="#" class="footer__link">Преимущества</a>
-                        <a href="#" class="footer__link">Подписка на рассылку</a>
+                        <a href="#flexible_setup" class="footer__link">Гибкая настройка под мероприятие</a>
+                        <a href="#table" class="footer__link">Преимущества</a>
+                        <a href="#form" class="footer__link">Подписка на рассылку</a>
                     </div>
                 </div>
                 <div class="footer__contacts">
