Fixed login buttons

--- a/login.html
+++ b/login.html
@@ -34,15 +34,10 @@
                     <p class="main__form-text">Пароль</p>
                     <input type="password" placeholder="Введите пароль" class="main__form-input">
                 </div>
-                <div class="main__form-btn">
-                    <a href="#" class="main__form-btn-text">Войти</a>
-                </div>
+                <a href="#" class="main__form-btn">Войти</a>
                 <a href="#" class="main__link main__form-forgot">Забыли пароль?</a>
                 <p class="main__text main__form-or-text">ИЛИ</p>
-                <div class="main__hr-login">
-                    <img src="./assets/img/hr-logo.png" alt="Logo">
-                    <p class="main__hr-login-text">HR Alabuga</p>
-                </div>
+                <a href="#" class="main__hr-login">Hr Alabuga</a>
             </form>
             <footer class="footer">
                 
