last commit. Added hover effects

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <p class="form__input-text">Почта</p>
                     <input type="email" class="form__input-block" placeholder="customer@mail.ru">
                     <p class="form__input-text">Телефон</p>
-                    <input type="tel" class="form__input-block" placeholder="+7 (999) 999-99-99" style="margin-bottom: 52px;">
+                    <input type="tel" class="form__input-block" style="margin-bottom: 52px;"  placeholder="+7 (999) 999-99-99">
                     <div class="form__label">
                         <input type="checkbox" name="recall" value="yes" class="form__checkbox">
                         <p class="form__checkbox-text">Даю согласие на получение обратной связи по заявке</p>
