--- a/login.html
+++ b/login.html
@@ -14,10 +14,7 @@
     <header class="header">
         <div class="header__wrap">
             <img src="./assets/img/login-header-logo.png" alt="Logo" class="header__logo">
-            <div class="header__lang">
-                <p class="header__lang-text">РУ</p>
-                <img src="./assets/img/login-btn.png" alt="btn">
-            </div>
+            <a class="header__lang">РУ</a>
             
         </div>
     </header>
